--- a/nodejs/public/css/style.css
+++ b/nodejs/public/css/style.css
@@ -1,24 +1,24 @@
 .footer {
-    position: absolute;
+    position: fixed;
     width: 100%;
     bottom: 0px;
 }
 
 .pictureMin {
-    width: 400px;
+    width: 100%;
 }
 
 .pictureMinBody {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
     width: 150px;
     height: 150px;
-    align-content: space-between;
 }
 
 .thumbnail {
     padding: 5px;
+}
+
+.thumbnail:hover {
+    background-color: aliceblue;
 }
 
 .thumbnail_text {
